[tool.poetry]
name = "dg-tta"
version = "0.1.0"
description = ""
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nnunetv2 = "^2.2.1"
randomname = "^0.2.1"
wandb = {version = "^0.16.1", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dg_tta = "dg_tta.run:main"